--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -1,7 +1,3 @@
-$primary: #333;
-$text-color: #fff;
-
-body {
-  background-color: $primary;
-  color: $text-color;
+.navbar .btn-outline-light:hover {
+  color: var(--bs-dark);
 }
